feat: faq accordion header compound

--- a/packages/react/src/styles.css
+++ b/packages/react/src/styles.css
@@ -1,3 +1,4 @@
 @import "./button/button.css";
+@import "./accordion/accordion.css";
 @import "./mode-toggle/mode-toggle.css";
 @import "./text-field/text-field.css";
