--- a/packages/react/src/styles.css
+++ b/packages/react/src/styles.css
@@ -1,4 +1,5 @@
 @import "./button/button.css";
+@import "./checkbox/checkbox.css";
 @import "./accordion/accordion.css";
 @import "./mode-toggle/mode-toggle.css";
 @import "./text-field/text-field.css";
